# materialize-astro

./: DockerfileBackend  DockerfileFrontend  README.md  docker-compose.yml  elk-docker-compose.yml  package-lock.json
Logiz Blog/documentation/: index.html
docker-asset/: init.sql  logstash.conf  mariadb.yml
html-version/materialize-html-admin-template/: package.json
materialize-astro/: README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
materialize-astro/src/: middleware.ts
materialize-fastapi/: .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  main2.py  pyproject.toml  ruff.toml
materialize-fastapi/app/: __main__.py  celery_app.py  db.py  main.py
materialize-fastapi/app/api/: angkasapura_route.py  auth.py  hubnet.py  monitor_route.py  routes.py  sse.py
materialize-fastapi/app/api/middleware/: auth_middleware.py  exception_handler.py
materialize-fastapi/app/db/: db_logger.py  mysql.py  redis_conn.py  redis_lock.py  seeder.py
materialize-fastapi/app/db/seed/: failed_invs.csv  seeder_invoices.py
materialize-fastapi/app/models/: ap2_fail_inv.py  hubnet_request.py  hubnet_response.py  inv_ap2.py  respons_inv_ap2.py  user.py  void_inv_ap2.py
materialize-fastapi/app/schemas/: ap2_fail_inv_schema.py  ap2_send_inv_schema.py  datatables_schema.py  delete_data_terkirim_schema.py  error_schema.py  hubnet_request_schema.py  inv_ap2_schema.py  respons_inv_ap2_schema.py  user_schema.py  void_invoice_schema.py
materialize-fastapi/app/services/: crypto_service.py  datatables_service.py  hubnet_service.py  inv_ap2_service.py  monitor_service.py  redis_service.py  scheduler.py  sse.py
materialize-fastapi/app/services/query/: generate_inv_ekspor.sql  get_ekspor_hawb.sql  get_imp_hostawb.sql  get_imp_hubnet.sql  get_inc_hubnet.sql  get_out_hubnet.sql  mapping_column.py
materialize-fastapi/app/tasks/: __init__.py  fibonacci_job.py  get_imp_breakdown_hubnet_job.py  get_inc_hubnet.py  get_out_hubnet.py  init_apscheduler.py  math_job.py  sending_ke_hubnet_job.py  task_angkasapura.py  task_fibbonacy.py
materialize-fastapi/app/utils/: auth.py  auth_util.py  env.py  helper.py  logging_config.py  scheduler.py
materialize-fastapi/core/: env.py
materialize-fastapi/db/: mysql.py
materialize-fastapi/migrations/: env.py
materialize-fastapi/migrations/versions/: 2686e10f671a_create_inv_ap2_table.py  3b7fe30a8651_create_respons_inv_ap2_table.py  3ba3103b0a70_create_users_table.py
materialize-fastapi/model/: default-model.py
materialize-fastapi/scripts/: debug.py  run_prod.py  send_log.py  test_lagi.py  test_log.py
materialize-fastapi/service/: auth.py
starty/: blog-audio-post.html  blog-author.html  blog-blockquote-post.html  blog-detail-five.html  blog-detail-four.html  blog-detail-one.html  blog-detail-three.html  blog-detail-two.html  blog-grid-sidebar.html  blog-grid.html  blog-html-audio-post.html  blog-html-video-post.html  blog-image-grid-sidebar.html  blog-image-grid.html  blog-image-masonry-sidebar.html  blog-image-masonry.html  blog-list-sidebar.html  blog-list.html  blog-masonry-sidebar.html  blog-masonry.html  blog-slider-post.html  blog-standard-post.html  blog-vimeo-post.html  blog-youtube-post.html  components.html  index-application.html  index-business.html  index-cafe.html  index-charity.html  index-corporate.html  index-crypto.html  index-event.html  index-fashion.html  index-finance.html  index-freelancer.html  index-marketing.html  index-onepage.html  index-personal-blog.html  index-personal.html  index-portfolio.html  (+48 more)
template-baru/: .prettierrc.json  .stylelintignore  astro.config.mjs  fix-scss.js  package-lock.json  package.json  tsconfig.json
(+1011 files in other folders)
