[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "Contoh project FastAPI dengan Poetry"
authors = ["Wisnu Hidayat <wisnu@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.112.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
pymysql = "^1.1.1"
passlib = "^1.7.4"
faker = "^37.6.0"
bcrypt = "^4.3.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
pydantic = {extras = ["email"], version = "^2.11.7"}
pylint = "^3.3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
black = "^24.0.0"
ruff = "^0.5.0"

[tool.poetry.scripts]
dev = "app.__main__:main"
prod = "gunicorn --bind 0.0.0.0:8000 -w 4 -k uvicorn.workers.UvicornWorker app.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
extension-pkg-allow-list = "alembic"

[tool.pylint.'MESSAGES CONTROL']
disable = ["E1102","C0115","W0661","E1101"]
